src/objects/Apttus_Revenue2__Agreement_Fee_Prepay__c.object
<CustomObject>
    <description>Holds the many to many relationships between agreement fee and agreement prepay objects</description>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement fee</description>
        <inlineHelpText>Associated agreement fee</inlineHelpText>
        <label>Agreement Fee</label>
        <referenceTo>Apttus_Revenue2__Agreement_Fee__c</referenceTo>
        <relationshipLabel>Agreement Fee-Prepay</relationshipLabel>
        <relationshipName>Agreement_Fee_Prepay_F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Prepay__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement prepay</description>
        <inlineHelpText>Associated agreement prepay</inlineHelpText>
        <label>Agreement Prepay</label>
        <referenceTo>Apttus_Revenue2__Agreement_Prepay__c</referenceTo>
        <relationshipLabel>Agreement Fee-Prepay</relationshipLabel>
        <relationshipName>Agreement_Fee_Prepay_P</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Prepaid_Amount__c</fullName>
        <formula>Apttus_Revenue2__Agreement_Prepay__r.Apttus_Revenue2__Prepaid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepaid Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Prepaid_Units__c</fullName>
        <formula>Apttus_Revenue2__Agreement_Prepay__r.Apttus_Revenue2__Prepaid_Units2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepaid Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Agreement Fee-Prepay</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Agreement Fee-Prepay Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Fee-Prepay</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>